# vtk-external-facelist-evaluation

./: .clang-format  CMakeLists.txt  README.md  compile_frontier.sh
evaluation/: Paired_13_reordered.gpl  configuration.py  generate_figures.py  run_evaluation.py
evaluation/results/frontier_rocm6.2.0_tbb2022.0.0_kokkos4.4.01/data/cpu_time/: F-15-tet_128_threads_normal.yaml  F-15-tet_128_threads_random_2639962142.yaml  F-15-tet_1_threads_normal.yaml  F-15_128_threads_normal.yaml  F-15_128_threads_random_2639962142.yaml  F-15_1_threads_normal.yaml  JSM-tet_128_threads_normal.yaml  JSM-tet_128_threads_random_2639962142.yaml  JSM-tet_1_threads_normal.yaml  JSM_128_threads_normal.yaml  JSM_128_threads_random_2639962142.yaml  JSM_1_threads_normal.yaml
evaluation/results/frontier_rocm6.2.0_tbb2022.0.0_kokkos4.4.01/data/gpu_time/: F-15-tet_DP-Hash-Count-FNV1A_normal.yaml  F-15-tet_DP-Hash-Count-FNV1A_random_2639962142.yaml  F-15-tet_DP-Hash-Count-MinPointID_normal.yaml  F-15-tet_DP-Hash-Count-MinPointID_random_2639962142.yaml  F-15-tet_DP-Hash-Fight-FNV1A_normal.yaml  F-15-tet_DP-Hash-Fight-FNV1A_random_2639962142.yaml  F-15-tet_DP-Hash-Fight-MinPointID_normal.yaml  F-15-tet_DP-Hash-Fight-MinPointID_random_2639962142.yaml  F-15-tet_DP-Hash-Sort-FNV1A_normal.yaml  F-15-tet_DP-Hash-Sort-FNV1A_random_2639962142.yaml  F-15-tet_DP-Hash-Sort-MinPointID_normal.yaml  F-15-tet_DP-Hash-Sort-MinPointID_random_2639962142.yaml  F-15-tet_P-Hash-Count-FNV1A_normal.yaml  F-15-tet_P-Hash-Count-FNV1A_random_2639962142.yaml  F-15-tet_P-Hash-Count-MinPointID_normal.yaml  F-15-tet_P-Hash-Count-MinPointID_random_2639962142.yaml  F-15-tet_P-Hash-Fight-FNV1A_normal.yaml  F-15-tet_P-Hash-Fight-FNV1A_random_2639962142.yaml  F-15-tet_P-Hash-Fight-MinPointID_normal.yaml  F-15-tet_P-Hash-Fight-MinPointID_random_2639962142.yaml  F-15-tet_P-Hash-Sort-FNV1A_normal.yaml  F-15-tet_P-Hash-Sort-FNV1A_random_2639962142.yaml  F-15-tet_P-Hash-Sort-MinPointID_normal.yaml  F-15-tet_P-Hash-Sort-MinPointID_random_2639962142.yaml  (+72 more)
results/: configuration.py  generate_figures.py  run_evaluation.py
src/: Arguments.cxx  Arguments.h  CellFaceMinMaxPointId.h  ExternalFacelistEvaluation.cxx  ExternalFacesHashCountFnv1a.h  ExternalFacesHashCountMinPointId.h  ExternalFacesHashFightFnv1a.h  ExternalFacesHashFightMinPointId.h  ExternalFacesHashSortFnv1a.h  ExternalFacesHashSortMinPointId.h  YamlWriter.h  vtkDataSetSurfaceFilterSHash.cxx  vtkDataSetSurfaceFilterSHash.h  vtkGeometryFilterPClassifier.cxx  vtkGeometryFilterPClassifier.h  vtkGeometryFilterPHash.cxx  vtkGeometryFilterPHash.h  vtkGeometryFilterSClassifier.cxx  vtkGeometryFilterSClassifier.h
(+398 files in other folders)
